Fix user script management when subframes are present

Only the main frames should administer scripts associated with it.

Pick-to: 6.5
Fixes: QTBUG-113109
Change-Id: Ibda66f55ef99da632134a9de1425797262faba9b
Reviewed-by: Michael Brüning <michael.bruning@qt.io>
Reviewed-by: Martin Negyokru <negyokru@inf.u-szeged.hu>